hopefully fix TopRight layout bug

--- a/src/skins/vector/css/vector-web/structures/_RightPanel.scss
+++ b/src/skins/vector/css/vector-web/structures/_RightPanel.scss
@@ -42,7 +42,7 @@ limitations under the License.
 
 .mx_RightPanel_headerButton {
     cursor: pointer;
-    flex: 0;
+    flex: 0 0 auto;
     vertical-align: top;
     padding-left: 4px;
     padding-right: 5px;
